packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_analysis_import_search_payload.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 9
expression: value
---
{
  "repo_id": "sciml/imports",
  "imports": [
    {
      "repo_id": "sciml/imports",
      "module_id": "module:ProjectionPkg",
      "path": "src/ProjectionPkg.jl",
      "import_name": "SciMLBase",
      "target_package": "SciMLBase",
      "source_module": "SciMLBase",
      "kind": "reexport",
      "line_start": 4
    }
  ],
  "import_hits": [
    {
      "import": {
        "repo_id": "sciml/imports",
        "module_id": "module:ProjectionPkg",
        "path": "src/ProjectionPkg.jl",
        "import_name": "SciMLBase",
        "target_package": "SciMLBase",
        "source_module": "SciMLBase",
        "kind": "reexport",
        "line_start": 4
      },
      "score": 1.0,
      "rank": 1
    }
  ]
}
